@@ -39,6 +39,7 @@ CONFIG_ARCH="arm"
 CONFIG_ARCH_ARM=y
 CONFIG_ARCH_CORTEXM4=y
 CONFIG_ARCH_CHIP="lpc43xx"
+CONFIG_ARCH_CHIP_LPC43XX=y
 CONFIG_ARCH_CHIP_LPC4330FET100=y
 CONFIG_ARCH_BOARD="lpc4330-xplorer"
 CONFIG_ARCH_BOARD_LPC4330_XPLORER=y
@@ -71,7 +72,7 @@ CONFIG_BOOT_CS3FLASH=n
 #
 # Identify toolchain and linker options
 #
-CONFIG_LPC32_CODEREDW=y
+CONFIG_LPC43_CODEREDW=y
 CONFIG_LPC43_CODESOURCERYW=n
 CONFIG_LPC43_CODESOURCERYL=n
 CONFIG_LPC43_ATOLLIC_LITE=n
